--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Pumps;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Pumps;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityPumps;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "ApiUrl": "http://localhost:5187"
+  "ApiUrl": "http://localhost:5187",
+  "Token": {
+    "Key": "MmZSckp6QCgQgP+d5G93K0Np0+IAmMgSKbwhY+o73lU=",
+    "Issuer": "http://localhost:5187/"
+  }
 }
